# WinChronicle

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  WinChronicle.md  pyproject.toml
.github/: pull_request_template.md  release.yml
benchmarks/: README.md
docs/: blueprint-gap-audit-post-v0.1.12.md  codex-app-plugin-install.md  codex-app-workday-guide.md  codex-long-term-goal.md  codex-workday-plugin.md  compatibility-guardrail-sweep-post-v0.1.12.md  compatibility-guardrail-sweep-post-v0.1.13.md  compatibility-guardrail-sweep-post-v0.1.14.md  compatibility-guardrail-sweep-post-v0.1.15.md  compatibility-guardrail-sweep-post-v0.1.16.md  compatibility-guardrail-sweep-post-v0.1.17.md  compatibility-guardrail-sweep-post-v0.1.18.md  demo-promotion-kit.md  deterministic-demo.md  fixture-helper-privacy-index-parity-post-v0.1.18.md  goal-closure-v0.1.md  helper-watcher-diagnostics-sweep-post-v0.1.13.md  helper-watcher-diagnostics-sweep-post-v0.1.14.md  helper-watcher-diagnostics-sweep-post-v0.1.15.md  helper-watcher-diagnostics-sweep-post-v0.1.16.md  helper-watcher-diagnostics-sweep-post-v0.1.17.md  helper-watcher-diagnostics-sweep-post-v0.1.18.md  known-limitations.md  maintenance-index.md  manual-smoke-evidence-ledger.md  manual-smoke-evidence-template.md  mcp-client-setup.md  mcp-memory-contract-sweep-post-v0.1.13.md  mcp-memory-contract-sweep-post-v0.1.14.md  mcp-memory-contract-sweep-post-v0.1.15.md  mcp-memory-contract-sweep-post-v0.1.16.md  mcp-memory-contract-sweep-post-v0.1.17.md  mcp-memory-contract-sweep-post-v0.1.18.md  mcp-readonly-examples.md  (+103 more)
(+194 files in other folders)
