[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "winchronicle"
version = "0.2.37"
description = "UIA-first local memory for Windows agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
]

[project.scripts]
winchronicle = "winchronicle.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.0",
  "wheel>=0.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
winchronicle = [
  "codex_plugins/winchronicle-workday/.codex-plugin/plugin.json",
  "codex_plugins/winchronicle-workday/skills/workday-recorder/SKILL.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
